--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="it" dir="ltr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 
     <title>The Booleaner</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header><img src="img/img/logo.svg" alt="logo The Booleaner">
+      
+      </header>
+    </div>
+  </body>
 </html>
