add main article foto

--- a/index.html
+++ b/index.html
@@ -9,9 +9,51 @@
   </head>
   <body>
     <div class="container">
-      <header><img src="img/img/logo.svg" alt="logo The Booleaner">
-      
+      <header>
+        <img src="img/img/logo.svg" alt="logo The Booleaner">
       </header>
+
+      <main>
+            <h1>Internet deve essere al servizio del "bene pubblico": il  manifesto
+            di Tim Berners Lee</h1>
+            <h2 class="sotto">Scritto da <a href="https://prova.org" target="_blank">The Booleaner</a></h2>
+            <h6 class="sotto1">il 10/10/2020</h6>
+            <img src="img/img/tim-1.jpg" alt="tim-1">
+            <img src="img/img/tim-2.jpg" alt="tim-2">
+            <h6>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen
+            </h6>
+            <h6>2nd Photo: Tim Berners Lee, by Paul Clarke</h6>
+      </main>
+
+      <article>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id commodi minima officiis, repudiandae, a harum natus quisquam et, 
+        itaque necessitatibus illo fugiat dolor expedita. Dolorum facere ab officiis quisquam ipsa.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti sunt repudiandae est atque, obcaecati esse blanditiis</p>
+        <ul>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus delectus beatae fuga animi ex mollit.</li>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus delectus beatae fuga animi ex mollit.</li>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus delectus beatae fuga animi ex mollit.</li>
+        </ul>
+
+        <!--inserire tabella-->
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
+          minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in
+          vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril
+          delenit augue duis dolore te feugait nulla facilisi.</p></article>
+
+      <h2>Potrebbero interessarti</h2>
+      <div class="fotofine1"><h3>Lorem Ipsum Dolor</h3></div>
+      <div class="fotofine2"><h3>Lorem Ipsum Dolor</h3></div>
+
+
+
+
+
+      </article>
+
+
+
+
     </div>
   </body>
 </html>
