--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <td>Lorem, ipsum dolor</td>
                   <td>RLorem, ipsum dolor</td>
                 </tr>
-                <tr>
+                <tr class="alternate">
                   <td>RLorem, ipsum dolor</td>
                   <td>Lorem, ipsum dolor</td>
                   <td>RLorem, ipsum dolor</td>
@@ -63,7 +63,9 @@
                 <tr>
                   <td>RLorem, ipsum dolor</td>
                   <td>Lorem, ipsum dolor</td>
-                  <td>RLorem, ipsum dolor</td>
+                  <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id commodi minima officiis, repudiandae, a harum natus quisquam et, 
+                    itaque necessitatibus illo fugiat dolor expedita. Dolorum facere ab officiis quisquam ipsa.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti sunt repudiandae est atque, obcaecati esse blanditiis</td>
                 </tr>
               </tbody>
             
